<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_main_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_task_black_24dp"
            android:title="@string/menu_task" />

        <item
            android:id="@+id/nav_upload_image"
            android:icon="@drawable/ic_remark_black_24dp"
            android:title="@string/menu_uploads" />

        <item
            android:id="@+id/nav_leave"
            android:icon="@drawable/ic_leave_black_24dp"
            android:title="@string/menu_leave" />

    </group>


</menu>
