<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="becker.andy.userapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_leave"
        android:name="becker.andy.userapp.ui.leave.LeaveFragment"
        android:label="@string/menu_leave"
        tools:layout="@layout/fragment_leave" />



    <fragment
        android:id="@+id/nav_remark"
        android:name="becker.andy.userapp.ui.remark.RemarkFragment"
        android:label="@string/menu_remark"
        tools:layout="@layout/fragment_remark" />


    <fragment
        android:id="@+id/nav_task"
        android:name="becker.andy.userapp.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />
</navigation>